# mason

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: main.rs  parser.rs  types.rs  utils.rs
src/components/: defmt_section.rs  details_panel.rs  dwarf_details_panel.rs  dwarf_tree_panel.rs  memory_view.rs  mod.rs  regions_panel.rs  rtt_section.rs  sections_panel.rs  symbols_panel.rs  target_selector.rs
