[package]
name = "mason"
version = "0.1.0"
edition = "2021"

[dependencies]
addr2line = "0.25"
clap = { version = "4", features = ["derive"] }
gimli = "0.32"
gpui = "0.2.2"
gpui-component = { git = "https://github.com/longbridge/gpui-component.git", rev = "aa4f896b" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component.git", rev = "aa4f896b" }
object = "0.36"
anyhow = "1.0"
probe-rs = "0.24"
rustc-demangle = "0.1"
